# blokus-ai

./: .gitignore  Cargo.toml  README.md  blocks.py  environment.yml  game.py  sim.py  test.py  test.txt
src/: lib.rs  main.rs  main_normal.rs  time.rs
src/algorithm/: alg.rs  mod.rs  random.rs
src/evaluate/: greedy.rs  mix.rs  mod.rs  tournament.rs
src/evaluate/algorithms/: algorithm.rs  distance.rs  greedy.rs  minimax.rs  mix.rs  mod.rs  montecarlo.rs  move_count.rs  random.rs  traits.rs
src/evaluate/algorithms/heuristics/: heuristic.rs  mod.rs  move_count.rs  rollout.rs  score.rs
src/game/: mask.rs  mod.rs  opt.rs  piece.rs  state.rs  utils.rs  ver_x86.rs
src/game/ver_1/: mask.rs  mod.rs  state.rs
src/game/ver_2/: mod.rs  piece.rs  state.rs  utils.rs
src/game/ver_3/: mod.rs  piece.rs  state.rs  utils.rs
src/game/ver_other/: mod.rs  piece.rs  state.rs
src/game/ver_x86/: piece.rs  state.rs  utils.rs
src/tournament/: greedy.rs  mod.rs  tournament.rs
