cargo-features = ["profile-rustflags"]

[package]
name = "blokus-ai"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
itertools = "0.12.1"
once_cell = "1.19.0"
ansi_term = "0.12.1"
rand = "0.8.5"
rustc-hash = "1.1.0"

[profile.release]
opt-level = 3
rustflags = ["-Ctarget-cpu=native"]

[profile.perf]
opt-level = 3
debug = 1
inherits = "release"
rustflags = ["-Ctarget-cpu=native"]

[profile.x86]
rustflags = ["-Ctarget-cpu=native", "--cfg", "use_x86"]
opt-level = 3
debug = 1
inherits = "release"
