cargo-features = ["profile-rustflags"]

[package]
name = "blokus-ai"
edition = "2021"
default-run = "blokus-ai"

[[bin]]
name = "time"
path = "src/time.rs"

[dependencies]
itertools = "0.12.1"
once_cell = "1.19.0"
rand = "0.8.5"
colored = "2.1.0"
rustc-hash = "1.1.0"
rayon = "1.10.0"
serde_json = "1.0.116"

[profile.release]
opt-level = 3
rustflags = ["-Ctarget-cpu=native"]

[profile.perf1]
opt-level = 3
debug = 1
inherits = "release"
rustflags = ["-Ctarget-cpu=native", "--cfg", "alg_ver=\"1\""]

[profile.perf2]
rustflags = ["-Ctarget-cpu=native", "--cfg", "alg_ver=\"2\""]
opt-level = 3
debug = 1
inherits = "release"

[profile.perf3]
rustflags = ["-Ctarget-cpu=native", "--cfg", "alg_ver=\"3\""]
opt-level = 3
debug = 1
inherits = "release"


[profile.dev3]
rustflags = ["-Ctarget-cpu=native", "--cfg", "alg_ver=\"3\""]
inherits = "dev"
